# advocata

./: .env.example  .gitignore  ADMIN_PANEL_ARCHITECTURE.md  ADMIN_PANEL_FEATURES.md  ADMIN_PANEL_IMPLEMENTATION_PLAN.md  ADMIN_PANEL_INDEX.md  ADMIN_PANEL_QUICK_START.md  ADMIN_PANEL_SUMMARY.md  ADMIN_PANEL_TECHNICAL_SPEC.md  CLAUDE.md  FINANCIAL_API_IMPLEMENTATION.md  FINANCIAL_API_VERIFICATION.md  MIGRATION_PLAN_PYTHON.md  MOBILE_APP_DESIGN_IMPLEMENTATION_AUDIT.md  NOTIFICATION_MODULE_IMPLEMENTATION.md  ONBOARDING_IMPLEMENTATION_SUMMARY.md  ONBOARDING_QUICK_START.md  ONBOARDING_VISUAL_GUIDE.md  PHASE_7_IMPLEMENTATION_REPORT.md  PHASE_7_SETTINGS_COMPLETE.md  PROFILE_ENHANCEMENT_SUMMARY.md  README.md  SEED_DATA_QUICK_START.md  SERVICE_INTEGRATIONS_COMPLETE.md  SESSION_COMPLETE_SUMMARY.md  SETUP.md  docker-compose.prod.yml  docker-compose.yml
apps/backend-python/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
apps/backend-python/alembic/: env.py
apps/backend-python/alembic/versions/: 001_create_users_table.py  002_create_lawyers_table.py  003_create_documents_table.py  004_create_chat_tables.py  005_create_consultations_table.py  006_create_payments_table.py  007_create_subscriptions_table.py
apps/backend-python/app/: config.py  main.py
apps/backend-python/app/core/domain/: __init__.py  aggregate_root.py  domain_event.py  entity.py  result.py  value_object.py
apps/backend-python/app/core/infrastructure/: __init__.py  cache.py  database.py
apps/backend-python/app/modules/chat/: README.md  __init__.py
apps/backend-python/app/modules/chat/application/commands/: __init__.py  send_message_command.py  send_message_handler.py  start_conversation_command.py  start_conversation_handler.py
apps/backend-python/app/modules/chat/application/dtos/: __init__.py  conversation_dto.py
apps/backend-python/app/modules/chat/application/queries/: __init__.py  get_conversation_by_id_handler.py  get_conversation_by_id_query.py  get_conversations_by_user_handler.py  get_conversations_by_user_query.py
apps/backend-python/app/modules/chat/domain/entities/: __init__.py  conversation.py  message.py
apps/backend-python/app/modules/chat/domain/events/: __init__.py  conversation_archived.py  conversation_started.py  message_sent.py
apps/backend-python/app/modules/chat/domain/repositories/: __init__.py  conversation_repository.py
apps/backend-python/app/modules/chat/domain/services/: __init__.py  rag_service.py
apps/backend-python/app/modules/chat/domain/value_objects/: __init__.py  conversation_status.py  message_role.py
apps/backend-python/app/modules/chat/infrastructure/: __init__.py
apps/backend-python/app/modules/chat/infrastructure/persistence/: __init__.py
apps/backend-python/app/modules/chat/infrastructure/services/: __init__.py  openai_service.py  rag_service.py
apps/backend-python/app/modules/chat/presentation/: __init__.py
apps/backend-python/app/modules/consultation/: README.md
apps/backend-python/app/modules/consultation/application/: __init__.py
apps/backend-python/app/modules/consultation/domain/: __init__.py
apps/backend-python/app/modules/consultation/infrastructure/: __init__.py
apps/backend-python/app/modules/consultation/presentation/: __init__.py
apps/backend-python/app/modules/document/: README.md
apps/backend-python/app/modules/identity/: README.md
apps/backend-python/app/modules/lawyer/: README.md  __init__.py
apps/backend-python/app/modules/lawyer/application/: __init__.py
apps/backend-python/app/modules/lawyer/domain/: __init__.py
apps/backend-python/app/modules/lawyer/infrastructure/: __init__.py
apps/backend-python/app/modules/lawyer/presentation/: __init__.py
apps/backend-python/app/modules/payment/application/: __init__.py
apps/backend-python/app/modules/payment/domain/: __init__.py
apps/backend-python/app/modules/payment/infrastructure/: __init__.py
apps/backend-python/app/modules/payment/presentation/: __init__.py
(+1393 files in other folders)
